# py-boilingdata

./: .gitignore  Makefile  README.md  boilingdata.ipynb  main.py  pyproject.toml
py_boilingdata/: __init__.py  data_queue.py
tests/: conftest.py  test_connection.py  test_data_queue.py
tests/snapshots/test_connection/test_bd_query_large/: test_bd_query_large
